Make sure inline filter button in modal is visible

--- a/dark.scss
+++ b/dark.scss
@@ -311,6 +311,13 @@ $colorVariant:dark;
         }
       }
     }
+  .webkite-result-modal li b > webkite-toggle{
+	  border: 1px solid rgba(255,255,255,.15);
+	  &:hover{
+		  border: 1px solid $lighterOpacity;
+      background: $lighterOpacity;
+	  	}
+  	}
   .webkite-result .inline-filter-menu, .webkite-result-modal .inline-filter-menu{
     @include roundedUp(.375em);
     @include shadowHere;
